Fixed "scrollbar jumping" during modal transitions

--- a/alevi22-website/src/index.css
+++ b/alevi22-website/src/index.css
@@ -7,7 +7,7 @@
     --dark-color: rgb(36, 36, 36);
     --background-color: rgb(200, 235, 235);
     --shadow-color: rgba(0, 0, 0, 0.15);
-    --default-app-width: 80vw;
+    --default-app-width: 80%;
     --default-app-max-width: 1350px;
 }
 
@@ -27,6 +27,9 @@ html {
 }
 
 body {
+    width: 100vw;
+    overflow-x: hidden;
+    overflow-y: scroll;
     padding: 0;
     background-color: var(--background-color);
     font-size: 18px;
